fixed overflow issue (scrollbar was at the wrong position)

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -13,7 +13,7 @@
         border-radius: 20px;
 
         height: 100vh;
-        overflow: hidden;
+        overflow-y: scroll;
 }
 
 .header{
