--- a/src/app/components/todo/todo.component.less
+++ b/src/app/components/todo/todo.component.less
@@ -67,7 +67,6 @@
     padding-right: 10%;
     padding-top: 3%;
     box-sizing: border-box;
-    overflow-y: auto;
     max-height: 80vh; 
 }
 
